--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ minio==7.1.12
 passlib==1.7.4
 pyasn1==0.4.8
 pydantic==1.10.2
+python-dotenv==0.21.0
 python-jose==3.3.0
 python-multipart==0.0.5
 rsa==4.9
